<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/shape2"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                app:civ_border_width="3dp"
                app:civ_border_color="@color/black"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ara" />

            <LinearLayout
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNameAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/user"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvEmailAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvPhoneAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/noHp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnEditAccount"
                    android:background="@drawable/round_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_edit"
                    android:contentDescription="@string/img"/>

            </LinearLayout>
            
        </LinearLayout>

        <View
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="#878787"/>

        <TextView
            android:id="@+id/tvTermCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/term_condition"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvPrivacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/privacy_policy"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/language"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/logout"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <View
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:background="#878787"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/copyright"/>

    </LinearLayout>







</LinearLayout>