<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_container"
    android:layout_width="match_parent"
    android:layout_height="115dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="15dp"
    android:background="@drawable/rectangle4">

    <ImageView
        android:id="@+id/img_service"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:contentDescription="@string/img"/>

    <TextView
        android:id="@+id/tv_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:ellipsize="end"
        android:gravity="start"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_service"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tv_service" />


    <TextView
        android:id="@+id/tv_order_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:gravity="start"
        android:text="@string/title_date"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/img_service"
        app:layout_constraintTop_toBottomOf="@+id/tv_service" />


    <TextView
        android:id="@+id/order_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="2"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/img_service"
        app:layout_constraintStart_toStartOf="@+id/tv_order_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_service"
        tools:text="@string/order_date" />

    <View
        android:id="@+id/line"
        android:layout_width="310dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:background="@color/black"
        app:layout_constraintStart_toEndOf="@+id/img_service"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_date" />

    <TextView
        android:id="@+id/tv_pay_before"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:ellipsize="end"
        android:gravity="start"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:text="@string/title_pay_date"
        app:layout_constraintStart_toEndOf="@+id/img_service"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_date"/>

    <TextView
        android:id="@+id/pay_before"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="3"
        android:textColor="#F58F35"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/img_service"
        app:layout_constraintTop_toBottomOf="@+id/tv_pay_before"
        tools:text="@string/pay_date" />

    <Button
        android:id="@+id/btn_pay"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rectangle3"
        android:padding="0dp"
        android:text="@string/pay_now"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>