<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_container"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="15dp"
    android:background="@drawable/rectangle4">

    <ImageView
        android:id="@+id/img_service"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="6dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/img"/>

    <TextView
        android:id="@+id/tv_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:gravity="start"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_service"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tv_tukang" />

    <TextView
        android:id="@+id/do_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:gravity="start"
        android:textColor="#40000000"
        android:padding="5dp"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/img_service"
        app:layout_constraintTop_toBottomOf="@+id/tv_service"
        tools:text="@string/do_date" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="15dp"
        android:ellipsize="end"
        android:gravity="start"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/img_service"
        app:layout_constraintTop_toBottomOf="@+id/do_date" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:ellipsize="end"
        android:gravity="start"
        android:textColor="#F58F35"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tv_total"
        app:layout_constraintTop_toBottomOf="@+id/do_date"
        tools:text="@string/total_salary" />

</androidx.constraintlayout.widget.ConstraintLayout>